Try to fix an overlapping problem with the toast

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -539,6 +539,13 @@ hr {
 .toast {
   position: absolute;
   background-color: rgba(255, 255, 255, 0.97);
+  z-index: -1;
+}
+.show {
+  z-index: 3000;
+}
+.hide {
+  z-index: -1;
 }
 .toast-time {
   margin-left: 2%;
